fix: ajustes nos arquivos para o Swagger
